--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "dependencies": {
     "express": "^4.17.1"
   },
-  "author": "Nouveau Nom",
+  "author": "Updated Author Name",
   "license": "MIT"
 }
